# Leviathan

./: .editorconfig  .gitignore  CET6.md  CMakeLists.txt  Leviathan.sln  PdqSort.hpp  README.md  a.c  a.cc  a.cpp  a.drawio  a.hpp  a.i  a.md  a.pth  a.py  a.toml  a.txt  a.xml  annotations.hpp  any_view.hpp  argparser.hpp  avl.hpp  avl_tree.hpp  avlmini.cpp  b.cc  b.cpp  b.hpp  b.py  c.cpp  corr.cpp  generator.hpp  git_push.py  header.hpp  indirect.cpp  l.hpp  layout.cpp  lyra.hpp  main.c  main.cpp  (+24 more)
benchmark/: CMakeLists.txt  benchmark_buffer.cpp  benchmark_collection.cpp  benchmark_heap.cpp  benchmark_range.cpp  benchmark_sort.cpp  benchmark_tree.cpp  random_range.cpp  random_range.hpp  sorter.hpp
leviathan/algorithm/: CMakeLists.txt  Luhn.hpp  all.hpp  basic_sort.hpp  benchmark_sorter.hpp  combination.hpp  combination_range.hpp  combination_test.cpp  common.hpp  core.hpp  first_and_second_min_elements.hpp  heap.hpp  heap_sort.hpp  heap_test.cpp  intro_sort.hpp  linear_search.hpp  linear_search_test.cpp  lz77.hpp  pdq_sort.hpp  pdqsort.h  pdqsort.hpp  peek_sort.hpp  permutation.hpp  power_sort.hpp  sort_test.cpp  tim_sort.hpp  tim_sort_range.hpp  tim_sort_test.cpp  timsort.hpp
leviathan/collections/: CMakeLists.txt  associative_container_interface.hpp  avl_node.hpp  avl_tree.hpp  avl_tree_test.cpp  binary_search_tree.hpp  buffer.hpp  buffer_test.cpp  common.hpp  container_interface.hpp  iterator_interface.hpp  node_handle.hpp  py_hash.hpp  py_hash_test.cpp  rbtree.hpp  ring_buffer.hpp  ring_buffer_test.cpp  segment_tree.hpp  sequence_container_interface.hpp  sequence_container_interface_test.cpp  static_vector.hpp  static_vector_test.cpp  test_tree.ixx  tree.hpp
leviathan/collections/hashtable/: csharp_hash.hpp  dictionary.hpp  entry.hpp  hash_slot.hpp  hash_table.hpp  py_hash.hpp  py_hash_test.cpp  pyhash.hpp  pyhash_test.cpp  rust_hash.hpp
leviathan/collections/heap/: nd_heap.hpp  pairing_heap.hpp
leviathan/collections/internal/: avl_tree.hpp  buffer.hpp  common.hpp  node_handle.hpp  py_hash.hpp  ring_buffer.hpp  skip_list.hpp  sorted_list.hpp  tree.hpp  tree_drawer.hpp  tree_node.hpp
leviathan/collections/list/: skip_list.hpp  skip_list_drawer.hpp  skip_list_test.cpp  skip_node.hpp  skiplist.hpp  skiplist_test.cpp
leviathan/collections/tree/: avl_node.hpp  avl_tree.hpp  avl_tree_test.cpp  binary_node.hpp  binary_search_tree.hpp  binary_search_tree_test.cpp  red_black_node.hpp  red_black_node2.hpp  red_black_tree.hpp  red_black_tree_test.cpp  treap.hpp  treap_node.hpp  treap_test.cpp  tree.hpp  tree_drawer.hpp  tree_iterator.hpp  tree_node_operation.hpp  tree_set.hpp  tree_test.inc
leviathan/collectionsV2/: CMakeLists.txt  associative_container_interface.hpp  associative_container_interface_test.cpp  common.hpp  sequence_container_interface.hpp  sequence_container_interface_test.cpp
leviathan/collectionsV2/list/: skiplist.hpp
leviathan/collectionsV2/tree/: avl_node.hpp  avl_tree.hpp  avl_tree_test.cpp  binary_node.hpp  binary_search_tree.hpp  binary_search_tree_test.cpp  tree.hpp  tree_node_operation.hpp  tree_test.inc  tree_test.ixx
leviathan/config_parser/: CMakeLists.txt  accessor.hpp  cmd.hpp  cmd2.hpp  cmd_value.hpp  command_line.hpp  command_line2.hpp  common.hpp  context.hpp  context_reader.hpp  convert.hpp  dictionary.hpp  encode.hpp  formatter.hpp  ini.cpp  ini.hpp  item.hpp  json.cpp  json.hpp  json2.hpp  json_test.cpp  json_value.hpp  json_value2.hpp  optional.hpp  optional_ptr.hpp  parse_context.hpp  parser.hpp  scanner.hpp  table.hpp  toml.cpp  toml.hpp  toml2.hpp  toml_value.hpp  toml_value2.hpp  value.hpp  value_cast.hpp  value_cast_test.cpp  xml.hpp
leviathan/config_parser/cmd/: command.hpp
leviathan/config_parser/ini/: INI2.hpp  ini.cpp  ini.hpp
leviathan/config_parser/json/: decoder.hpp  decoder2.hpp  decoder5.hpp  encoder.hpp  json.cpp  json.hpp  json_formatter.hpp  json_test.cpp  number.hpp  value.hpp
leviathan/math/: CMakeLists.txt  bigint.cpp  bigint.hpp  bigint_test.cpp  common.hpp  core.hpp  double_integral.hpp  float16.hpp  half.hpp  hasher.hpp  int128.hpp  int128.py  int128_test.cpp  transform.hpp  utilis.hpp  vector.cpp  vector.hpp  vector_test.cpp
leviathan/meta/: CMakeLists.txt  concepts.hpp  core.hpp  function_traits.hpp  function_traits_test.cpp  meta.hpp  meta_test.cpp  template_info.hpp  type.hpp  type_list.hpp  type_list_v2.hpp
leviathan/utils/: CMakeLists.txt  bind_back.hpp  container_test.hpp  controllable_value.hpp  iterator.hpp  layout.hpp  layout2.hpp  layout_test.cpp  named_tuple.hpp  named_tuple_test.cpp  single.hpp  timer.hpp
pyext/: CMakeLists.txt  cpp2py.cpp  setup.py
test/: CMakeLists.txt  a.hpp  base.hpp  c.cpp  checked_allocator.hpp  cpp2py.cpp  except_allocator.hpp  fancy_ptr.hpp  setup.py  skip_list.cpp  struct.hpp  test.c  test.cpp  test_avl_tree.cpp  test_avl_tree.hpp  test_bigint.cpp  test_binary_search_tree.cpp  test_bind_back.cpp  test_buffer.cpp  test_builder.cpp  test_callable_container.cpp  test_collection_common.cpp  test_collections.hpp  test_combination.cpp  test_console.cpp  test_container.cpp  test_container.hpp  test_container_allocator.cpp  test_container_allocator.hpp  test_fixed_string.cpp  test_function_traits.cpp  test_hash_table.cpp  test_ioc_container.cpp  test_iterator.cpp  test_layout.cpp  test_memory_invoke.cpp  test_meta.cpp  test_named_tuple.cpp  test_optional.cpp  test_ordered_container.hpp  (+19 more)
test/src/: INI.cpp  alg.cpp  callable_container.cpp  console.cpp  count_test.cpp  enumerator_test.cpp  functions_cluster_test.cpp  generator_test.cpp  hash_table.cpp  ioc_container.cpp  json.cpp  matrix_test.cpp  memory_pool.cpp  meta_test.cpp  named_tuple.cpp  random_iterator.cpp  skip_list.cpp  sorted_list.cpp  string_test.cpp  test_for_bitmap.cpp  test_for_bits.c  test_for_function_traits.cpp  test_for_list.c  test_for_memory_invoke.cpp  test_for_meta.cpp  test_for_printer.c  test_for_ranges.cpp  test_for_tensor.cpp  test_for_test.cpp  test_zip.cpp  thread_pool.cpp  triple_integral.cpp  tuple_test.cpp
test/src/io/: console.cpp
test/utils/: struct.hpp  template_test.hpp
(+622 files in other folders)
